--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-streamlit
+streamlit>=1.28.0
+pandas>=2.0.0
+plotly>=5.15.0
+requests>=2.31.0
+aiohttp>=3.8.0
+google-cloud-texttospeech>=2.16.0
+google-cloud-translate>=3.12.0
+PyJWT>=2.8.0
+cryptography>=41.0.0
+python-dotenv>=1.0.0
+asyncio>=3.4.3
+concurrent-futures>=3.1.1
+dataclasses>=0.6
